# bb7

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: run_tests.yml  upload_release.yml
src/bb7/: chat.py  cli.py  examine.py  llm.py  rag.py  rag_test.ipynb  utils.py  write.py
tests/: rag_nasser.ipynb  rag_siddi.ipynb
tests/bb7/: test_chat.py  test_cli.py  test_examine.py  test_llm.py  test_utils.py  test_write.py
